# hiver-challenge

./: .env.example  README.md  embed.py  eval.py  generate_data.py  generate_reply.py  main.py  pyproject.toml  synthetic_dataset.json
chroma_db/: chroma.sqlite3
