[project]
name = "hiver-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "google-genai>=2.10.0",
    "ipykernel>=7.3.0",
    "llama-index-core>=0.14.23",
    "llama-index-embeddings-google-genai>=0.5.1",
    "llama-index-llms-gemini>=0.6.2",
    "llama-index-vector-stores-chroma>=0.5.5",
    "pip>=26.1.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
